- update box--flex--pos with display: flex included; Now only one class name need to be added (box--flex box--flex--pos--x) to (box--flex--pos--x) only

--- a/demo/index.html
+++ b/demo/index.html
@@ -51,73 +51,73 @@
 			</div>
 		</div>
 
-		<div class="box--flex box--pos--Xxx">
+		<div class="box--flex--pos--Xxx">
 			<div>
 				justify-content: flex-start;
-				<div>box--flex box--pos--Xxx</div>
+				<div>box--flex--pos--Xxx</div>
 			</div>
 		</div>
-		<div class="box--flex box--pos--x">
+		<div class="box--flex--pos--x">
 			<div>
 				justify-content: center;
-				<div>box--flex box--pos--x</div>
+				<div>box--flex--pos--x</div>
 			</div>
 		</div>
-		<div class="box--flex box--pos--xxX">
+		<div class="box--flex--pos--xxX">
 			<div>
 				justify-content: flex-end;
-				<div>box--flex box--pos--xxX</div>
+				<div>box--flex--pos--xxX</div>
 			</div>
 		</div>
-		<div class="panel box--flex box--pos--xXx">
+		<div class="panel box--flex--pos--xXx">
 			<div>
 				justify-content: space-around;
-				<div>box--flex box--pos--xXx</div>
+				<div>box--flex--pos--xXx</div>
 			</div>
 			<div>
 				justify-content: space-around;
-				<div>box--flex box--pos--xXx</div>
+				<div>box--flex--pos--xXx</div>
 			</div>
 			<div>
 				justify-content: space-around;
-				<div>box--flex box--pos--xXx</div>
+				<div>box--flex--pos--xXx</div>
 			</div>
 		</div>
-		<div class="panel box--flex box--pos--XxX">
+		<div class="panel box--flex--pos--XxX">
 			<div>
 				justify-content: space-between;
-				<div>box--flex box--pos--XxX</div>
+				<div>box--flex--pos--XxX</div>
 			</div>
 			<div>
-				justify-content: space-around;
-				<div>box--flex box--pos--XxX</div>
+				justify-content: space-between;
+				<div>box--flex--pos--XxX</div>
 			</div>
 			<div>
-				justify-content: space-around;
-				<div>box--flex box--pos--XxX</div>
+				justify-content: space-between;
+				<div>box--flex--pos--XxX</div>
 			</div>
 		</div>
 	</div>
 
 	<hr>
 
-	<div class="box--flex box--pos--XxX panel">
-		<div class="box--flex box--pos--Yyy">
+	<div class="box--flex--pos--XxX panel">
+		<div class="box--flex--pos--Yyy">
 			<div>
 				align-items: flex-start;
-				<div>box--flex box--pos--xXx</div>
+				<div>box--flex--pos--xXx</div>
 			</div>
 		</div>
-		<div class="box--flex box--pos--y">
+		<div class="box--flex--pos--y">
 			<div>
 				align-items: center;
-				<div>box--flex box--pos--y</div>
+				<div>box--flex--pos--y</div>
 			</div>
 		</div>
-		<div class="box--flex box--pos--yyY">
+		<div class="box--flex--pos--yyY">
 			<div>
 				align-items: center;
-				<div>box--flex box--pos--yyY</div>
+				<div>box--flex--pos--yyY</div>
 			</div>
 		</div>
 	</div>
