- fix demo elements spacing

--- a/demo/index.html
+++ b/demo/index.html
@@ -101,53 +101,55 @@
 
 	<hr>
 
-	<div class="box--flex--pos--XxX panel">
-		<div class="box--flex--pos--Yyy">
-			<div>
-				align-items: flex-start;
-				<div>box--flex--pos--xXx</div>
+	<div class="panel panel--margin">
+		<div class="box--flex--pos--XxX panel">
+			<div class="box--flex--pos--Yyy">
+				<div>
+					align-items: flex-start;
+					<div>box--flex--pos--xXx</div>
+				</div>
+			</div>
+			<div class="box--flex--pos--y">
+				<div>
+					align-items: center;
+					<div>box--flex--pos--y</div>
+				</div>
+			</div>
+			<div class="box--flex--pos--yyY">
+				<div>
+					align-items: center;
+					<div>box--flex--pos--yyY</div>
+				</div>
 			</div>
 		</div>
-		<div class="box--flex--pos--y">
-			<div>
-				align-items: center;
-				<div>box--flex--pos--y</div>
-			</div>
-		</div>
-		<div class="box--flex--pos--yyY">
-			<div>
-				align-items: center;
-				<div>box--flex--pos--yyY</div>
-			</div>
-		</div>
-	</div>
-	
-	<div>
-		box--flex--column
-		<div class="box--flex--column panel">
-			<div>
-				column
-			</div>
-			<div>
-				column
-			</div>
-			<div>
-				column
-			</div>
-		</div>
-	</div>
 
-	<div>
-		box--flex--column--wrap
-		<div class="box--flex--column--wrap panel">
-			<div>
-				column
+		<div>
+			box--flex--column
+			<div class="box--flex--column panel">
+				<div>
+					column
+				</div>
+				<div>
+					column
+				</div>
+				<div>
+					column
+				</div>
 			</div>
-			<div>
-				column
-			</div>
-			<div>
-				column
+		</div>
+
+		<div>
+			box--flex--column--wrap
+			<div class="box--flex--column--wrap panel">
+				<div>
+					column
+				</div>
+				<div>
+					column
+				</div>
+				<div>
+					column
+				</div>
 			</div>
 		</div>
 	</div>
