- add '.' to class names in demo and update img in Readme.md

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,39 +14,39 @@
 <body>
 	<div class="panel panel--margin">
 		<div class="box--flex">
-			<div>box--flex</div>
+			<div>.box--flex</div>
 		</div>
 		<div>
-			box--flex--row
+			.box--flex--row
 			<div class="box--flex--row panel">
 				<div class="box--full-w">
 					row
-					<div>box--full-w</div>
+					<div>.box--full-w</div>
 				</div>
 				<div class="box--full-w">
 					row
-					<div>box--full-w</div>
+					<div>.box--full-w</div>
 				</div>
 				<div class="box--full-w">
 					row
-					<div>box--full-w</div>
+					<div>.box--full-w</div>
 				</div>
 			</div>
 		</div>
 		<div>
-			box--flex--row--wrap
+			.box--flex--row--wrap
 			<div class="box--flex--row--wrap panel">
 				<div class="box--pos--text-center">
 					row
-					<div>box--pos--text-center</div>
+					<div>.box--pos--text-center</div>
 				</div>
 				<div class="box--pos--text-center">
 					row
-					<div>box--pos--text-center</div>
+					<div>.box--pos--text-center</div>
 				</div>
 				<div class="box--pos--text-center">
 					row
-					<div>box--pos--text-center</div>
+					<div>.box--pos--text-center</div>
 				</div>
 			</div>
 		</div>
@@ -54,47 +54,47 @@
 		<div class="box--flex--pos--Xxx">
 			<div>
 				justify-content: flex-start;
-				<div>box--flex--pos--Xxx</div>
+				<div>.box--flex--pos--Xxx</div>
 			</div>
 		</div>
 		<div class="box--flex--pos--x">
 			<div>
 				justify-content: center;
-				<div>box--flex--pos--x</div>
+				<div>.box--flex--pos--x</div>
 			</div>
 		</div>
 		<div class="box--flex--pos--xxX">
 			<div>
 				justify-content: flex-end;
-				<div>box--flex--pos--xxX</div>
+				<div>.box--flex--pos--xxX</div>
 			</div>
 		</div>
 		<div class="panel box--flex--pos--xXx">
 			<div>
 				justify-content: space-around;
-				<div>box--flex--pos--xXx</div>
+				<div>.box--flex--pos--xXx</div>
 			</div>
 			<div>
 				justify-content: space-around;
-				<div>box--flex--pos--xXx</div>
+				<div>.box--flex--pos--xXx</div>
 			</div>
 			<div>
 				justify-content: space-around;
-				<div>box--flex--pos--xXx</div>
+				<div>.box--flex--pos--xXx</div>
 			</div>
 		</div>
 		<div class="panel box--flex--pos--XxX">
 			<div>
 				justify-content: space-between;
-				<div>box--flex--pos--XxX</div>
+				<div>.box--flex--pos--XxX</div>
 			</div>
 			<div>
 				justify-content: space-between;
-				<div>box--flex--pos--XxX</div>
+				<div>.box--flex--pos--XxX</div>
 			</div>
 			<div>
 				justify-content: space-between;
-				<div>box--flex--pos--XxX</div>
+				<div>.box--flex--pos--XxX</div>
 			</div>
 		</div>
 	</div>
@@ -106,25 +106,25 @@
 			<div class="box--flex--pos--Yyy">
 				<div>
 					align-items: flex-start;
-					<div>box--flex--pos--xXx</div>
+					<div>.box--flex--pos--xXx</div>
 				</div>
 			</div>
 			<div class="box--flex--pos--y">
 				<div>
 					align-items: center;
-					<div>box--flex--pos--y</div>
+					<div>.box--flex--pos--y</div>
 				</div>
 			</div>
 			<div class="box--flex--pos--yyY">
 				<div>
 					align-items: center;
-					<div>box--flex--pos--yyY</div>
+					<div>.box--flex--pos--yyY</div>
 				</div>
 			</div>
 		</div>
 
 		<div>
-			box--flex--column
+			.box--flex--column
 			<div class="box--flex--column panel">
 				<div>
 					column
@@ -139,7 +139,7 @@
 		</div>
 
 		<div>
-			box--flex--column--wrap
+			.box--flex--column--wrap
 			<div class="box--flex--column--wrap panel">
 				<div>
 					column
